--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+
+  font-family: "Outfit", sans-serif;
   color: #f4f4f4;
   background-color: #212529;
 }
@@ -18,17 +20,90 @@
   width: 400px;
   background-color: rgb(31, 40, 55);
   border-radius: 30px;
+  padding: 30px;
 
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.card h2 {
+  margin-top: 20px;
+}
+
+.card p {
+  margin-bottom: 20px;
 }
 
 .rating-list {
-  display: block;
   list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 30px;
+}
+
+.rating-btn {
+  padding: 12px;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+.rating-btn:link,
+.rating-btn:visited {
+  background-color: #495057;
+  color: hsl(220, 15%, 55%);
+}
+
+.rating-btn:active {
+  background-color: #495057;
+  color: hsl(220, 15%, 55%);
+}
+
+.rating-btn:hover,
+.rating-btn:active {
+  color: #f4f4f4;
+  background-color: #e67700;
+}
+
+.card-btn {
+  width: 100%;
+  height: 40px;
+  border: none;
+  border-radius: 30px;
+  text-transform: uppercase;
+  letter-spacing: 1.3;
+  background-color: #e67700;
+  color: inherit;
+  font-family: inherit;
+  font-size: 15px;
+  font-weight: 700;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.card-btn:hover {
+  background-color: #f4f4f4;
+  color: #e67700;
 }
 
 .hidden {
   display: none;
+}
+
+/* REUSABLE */
+.circle-figure {
+  height: 40px;
+  width: 40px;
+  background-color: #495057;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: hsl(220, 15%, 55%);
+}
+
+.active {
+  color: #f4f4f4 !important;
+  background-color: #adb5bd !important;
 }
